Fix typo in CI Gemfile names, move into root
* Don't know how to make Gemfiles in a subdirectory work with the
  gemspec directive.

Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ rvm:
   - jruby
   - ruby-head
 gemfile:
-  - ci/Gemfile.datamapper-1.0.x
-  - ci/Gemfile.datamapper-1.1.x
+  - Gemfile.datamapper-1.0.x.ci
+  - Gemfile.datamapper-1.1.x.ci
